<resources>
    <string name="app_name">Cascais 360</string>
    <string name="myCascais">MyCascais</string>

    <string name="mycascais_email_phone">E-MAIL / UTILIZADOR</string>
    <string name="mycascais_password">PALAVRA PASSE</string>
    <string name="mycascais_re_password">CONFIRMAR PALAVRA PASSE</string>

    <string name="mycascais_username">USERNAME</string>
    <string name="mycascais_email">E-MAIL</string>
    <string name="mycascais_nif">NIF</string>
    <string name="mycascais_vatin">VATIN</string>
    <string name="mycascais_phone">TELEMÓVEL</string>
    <string name="mycascais_full_name">NOME COMPLETO</string>
    <string name="mycascais_full_birthday">DATA ANIVERSÁRIO</string>

    <string name="mycascais_agree_terms">concordo com os </string>

    <string name="mycascais_save">GUARDAR</string>
    <string name="mycascais_confirm">CONFIRMAR</string>
    <string name="mycascais_next">SEGUINTE</string>

    <string name="mycascais_agree_terms_policy"><u>termos e condições.</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_mycascais">MYCASCAIS</string>
    <string name="title_activity_mycascais_register">REGISTO</string>
    <string name="title_activity_maps">Map</string>

    <!--Server key 1-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC9U2cnZcDdHpq4cFnrppGYk1DaSYdw0po</string>
</resources>
